# indirectratesforecast

./: .dockerignore  .env.example  .gitignore  API_GUIDE.md  CLAUDE.md  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
configs/: default_rates.yaml
data_demo/: Account_Map.csv  Direct_Costs_By_Project.csv  GL_Actuals.csv  Scenario_Events.csv
data_test/: Account_Map.csv  Direct_Costs_By_Project.csv  GL_Actuals.csv
skills/: README.md
skills/costpoint-parser/: parse.ts  skill.json
skills/generic-parser/: parse.ts  skill.json
skills/netsuite-parser/: parse.ts  skill.json
skills/quickbooks-parser/: parse.ts  skill.json
skills/unanet-parser/: parse.ts  skill.json
skills/vision-parser/: parse.ts  skill.json
skills/xero-parser/: parse.ts  skill.json
specs/: INDEX.md  README.md  architecture.md
specs/agents/: AnalystAgent.md  PlannerAgent.md  ReporterAgent.md
specs/claude/: README.md
specs/plans/: TEMPLATE.md
specs/skills/: README.md  apply_scenario_events.md  build_baseline_projection.md  compute_actual_aggregates.md  compute_rates_and_impacts.md  map_accounts_to_pools.md  normalize_inputs.md  package_management_pack.md
specs/tasks/: TEMPLATE.md  add_new_pool_or_base.md  add_new_scenario_type.md  onboard_new_input_export.md
src/indirectrates/: agents.py  cli.py  (+17 more)
tests/: test_api_crud.py  test_db.py  test_integration.py  test_model_cascade.py  test_mvp_pipeline.py  test_sub_pools.py
web/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+37 files in other folders)
